# CMake-sandbox

./: .Header.hpp.swp  CMakeLists.txt  Functions.cpp  Header.hpp  Main.cpp  Readme.md
Sub_Dir1/: CMakeLists.txt  Some_Functions.cpp  Some_Header.hpp
Sub_Dir2/: CMakeLists.txt  RunFunctions.cpp
derek_molloy_build_lib/: CMakeLists.txt
derek_molloy_use_lib/: CMakeLists.txt  libtest.cpp
make_a_package/: CMakeLists.txt  License.txt
make_a_package/include/: Student.h
make_a_package/src/: Student.cpp
testinclude/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  testInclude  testinclude.cpp
testlib/: CMakeCache.txt  CMakeLists.txt  Header.hpp  Makefile  cmake_install.cmake  install_manifest.txt  testLibConfig.cmake
testlib/include/: testLib.h
tests/: CMakeLists.txt  boost_tests.cpp  test_Assert.cpp  test_Failure.cpp  test_FunctionCall.cpp
tools/: cmake_commands.txt
